objects/Renewal_Application__c.object
<CustomObject>
    <description>This is the object where permits and licenses can be renewed.</description>
    <fields>
        <fullName>AQB_Approval_Expiration_Date__c</fullName>
        <label>AQB Approval Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Address__c</fullName>
        <description>Additional Address from credential to be displayed on renewal application</description>
        <formula>License__r.Additional_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Fees__c</fullName>
        <label># Advertising Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apartment_Units__c</fullName>
        <label># Apartment Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Full_Name__c</fullName>
        <formula>Applicant__r.FirstName &amp; &apos; &apos; &amp; Applicant__r.MiddleName &amp; &apos; &apos; &amp; Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact on the Renewal</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Renewal_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Renewal Applications</relationshipLabel>
        <relationshipName>Renewal_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttestationFullName__c</fullName>
        <description>This is the full name of the attester.</description>
        <label>AttestationFullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attestation_Date__c</fullName>
        <description>Date of the attestation.</description>
        <label>Attestation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the applicant attest to the application.</description>
        <label>Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Length_with_hitch__c</fullName>
        <description>Body Length (with hitch)</description>
        <formula>License__r.Body_Length_with_hitch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Body Length (with hitch)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Width_with_hitch__c</fullName>
        <description>Body Width (with hitch)</description>
        <formula>License__r.Body_Width_with_hitch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Body Width (with hitch)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_License__c</fullName>
        <description>Is this a business license</description>
        <formula>OR(License__r.Business_License__c,
Permit__r.Business_License__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Hours__c</fullName>
        <description>CE hours</description>
        <label>CE Hours</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Camping_Resorts__c</fullName>
        <label># Camping Resorts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_owner_Name__c</fullName>
        <description>co-owner name to be displayed on renewal application</description>
        <formula>License__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_owner_Phone__c</fullName>
        <description>co-owner phone to be displayed in renewal application</description>
        <formula>License__r.Owner_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Address__c</fullName>
        <description>community address from permit to be displayed on renewal application</description>
        <formula>Permit__r.Community_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_ID_Number__c</fullName>
        <description>Community Id Number from Permit</description>
        <formula>Permit__r.Community_ID_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <description>Community Name from Permit</description>
        <formula>Permit__r.Community_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Owner__c</fullName>
        <description>community owner from permit to be displayed on renewal application</description>
        <formula>Permit__r.Community_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Community County from Permit</description>
        <formula>Permit__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Renewal_Delivery_Method__c</fullName>
        <label>Course Renewal Delivery Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distance / On-Line</fullName>
                </value>
                <value>
                    <fullName>Classroom (Instructor in room with students)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>Credential Type</description>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This field shows what credential type is being renewed/reinstatement</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Site_Count__c</fullName>
        <description>current site count to display on renewals</description>
        <formula>Permit__r.Current_Site_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Site Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Facilities_will_be_ready__c</fullName>
        <description>Date Facilities will be ready from credential to be displayed on renewal application</description>
        <formula>License__r.Date_Facilities_will_be_ready__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Facilities will be ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Disposition__c</fullName>
        <label>Description of Disposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id of the record</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_source_c__c</fullName>
        <label>External_source__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is checked when answered Yes to generate invoice</description>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDECC_Approval_Expiration_Date__c</fullName>
        <label>IDECC Approval Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Contracts__c</fullName>
        <label># Initial Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_fees__c</fullName>
        <label># Interval fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Account__c</fullName>
        <formula>IF( ISPICKVAL(Credential_Type__c , &apos;Engineering/Land Surveying Company&apos;) , TEXT(License__r.MUSW__Primary_Licensee__r.Business_Structure__c),&apos;&apos;)</formula>
        <label>License Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Application</label>
        <referenceTo>MUSW_Application2__c</referenceTo>
        <relationshipLabel>Renewal Applications</relationshipLabel>
        <relationshipName>Renewal_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <formula>License__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the license that is being renewed.</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Renewal &amp; Reinstatement Applications</relationshipLabel>
        <relationshipName>Renewal_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to the renewal.</description>
        <label>Licensee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Renewal &amp; Reinstatement Applications</relationshipLabel>
        <relationshipName>Renewal_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MHC_Application_Type__c</fullName>
        <label>MHC Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Change in Ownership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Makes_of_Homes_to_be_Sold__c</fullName>
        <description>Makes of Homes to be Sold from credential to be displayed on renewal application</description>
        <formula>License__r.Makes_of_Homes_to_be_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Makes of Homes to be Sold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methods_of_Disposition__c</fullName>
        <label>Methods of Disposition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airplane</fullName>
                </value>
                <value>
                    <fullName>Boat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Military_Spouse__c</fullName>
        <formula>License__r.Military_Spouse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Spouse/Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military__c</fullName>
        <formula>License__r.Military__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <description>Model Year</description>
        <formula>License__r.Model_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Fee_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Fee Required?</description>
        <label>No Fee Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Fee__c</fullName>
        <formula>IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Commercial Building&quot;), TRUE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Boiler&quot;), TRUE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Elevator&quot;), TRUE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Fire Supression/Alarm Systems&quot;), TRUE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Other&quot;), TRUE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Plumbing&quot;), TRUE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - POWTS&quot;), TRUE, 
FALSE)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Burials__c</fullName>
        <description>Total count of internments, entombments, and inurnments)</description>
        <formula>Number_of_Entombments__c +  Number_of_Inurnments__c +  Number_of_Internments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Burials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cremations__c</fullName>
        <label>Number of Cremations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Dispositions__c</fullName>
        <label>Number of Dispositions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Entombments__c</fullName>
        <label>Number of Entombments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Internments__c</fullName>
        <label>Number of Internments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inurnments__c</fullName>
        <label>Number of Inurnments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <label>Number of Sites</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-175</fullName>
                </value>
                <value>
                    <fullName>175+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Units</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_or_Paper_Application__c</fullName>
        <description>Same as License Object</description>
        <label>Online or Paper Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                    <default>true</default>
                    <label>Online</label>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>This is the type of permit being renewed.</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the permit that the renewal is referring to.</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipName>Renewal_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pieces_of_Personal_Property__c</fullName>
        <label># Pieces of Personal Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Approval__c</fullName>
        <label>Pre-Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AQB</fullName>
                </value>
                <value>
                    <fullName>IDECC</fullName>
                </value>
                <value>
                    <fullName>USPAP Instructor</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This is used for permit renewal.</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Type__c</fullName>
        <description>Type of reinstatement.</description>
        <label>Renewal Reinstatement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Renewal PTO</fullName>
                </value>
                <value>
                    <fullName>Renewal Plan Review</fullName>
                </value>
                <value>
                    <fullName>ReinstatementPTO</fullName>
                    <isActive>false</isActive>
                    <label>ReinstatementPTO</label>
                </value>
                <value>
                    <fullName>ReinstatementPlanReview</fullName>
                    <isActive>false</isActive>
                    <label>ReinstatementPlanReview</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <description>This is the renewal status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Renewal_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewed_Date__c</fullName>
        <description>Renewed date</description>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Type__c</fullName>
        <label>Responsible Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax_Seller_Permit_Number__c</fullName>
        <description>Stores Sales Tax Seller Permit Number from credential to be displayed on renewal</description>
        <formula>License__r.Sales_Tax_Seller_Permit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Seller Permit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <description>Used on the portal</description>
        <label>Section Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_for_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected for Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Accommodation_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Accommodation Request</description>
        <label>Special Accommodation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_to_Renewal_Reinstatement__c</fullName>
        <formula>IF( ISBLANK(Renewed_Date__c) , TODAY() - Renewed_Date__c, License__r.MUSW__Issue_Date__c - Renewed_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Renewal/Reinstatement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeshare_Projects__c</fullName>
        <label># Timeshare Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>Total_Fees__c - Total_Payments__c</description>
        <formula>Total_Fees__c - Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <description>Total Fees</description>
        <label>Total Fees</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <description>Total Payments</description>
        <label>Total Payments</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Name__c</fullName>
        <description>Trade Name from Credential to be displayed on renewal application</description>
        <formula>License__r.Trade_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Years_Expired__c</fullName>
        <formula>IF( NOT( ISBLANK( License__r.MUSW__Expiration_Date__c) ) ,
  IF( DATE( 2000 , MONTH( License__r.MUSW__Expiration_Date__c) , DAY( License__r.MUSW__Expiration_Date__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( License__r.MUSW__Expiration_Date__c),
     YEAR (Today()) - YEAR ( License__r.MUSW__Expiration_Date__c ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Renewal &amp; Reinstatement Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Renewal_Reinstatement_Type__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Renewed_Date__c</columns>
        <columns>Renewal_Expiration_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Auto_Renewals</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Applicant__c</columns>
        <columns>Credential__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Renewal_Reinstatement_Type__c</columns>
        <columns>Attestation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auto_Renew__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Auto-Renewals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DPCP_Portal_Submitted_Renewals</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>License__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Renewal_Reinstatement_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor,Dwelling Contractor Qualifier</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor Restricted,UDC Electrical Inspector,UDC HVAC Inspector</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Soil Erosion Inspector,Soil Tester,UDC Construction Inspector</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>UDC Inspection Agency,UDC Plumbing Inspector</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Attestation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DPCP Portal Submitted Renewals</label>
    </listViews>
    <listViews>
        <fullName>DPCP_Submitted_Renewal_Applications</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Applicant__c</columns>
        <columns>Credential__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Renewal_Reinstatement_Type__c</columns>
        <columns>Attestation_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor,Dwelling Contractor Qualifier</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor Restricted,UDC Electrical Inspector,UDC HVAC Inspector</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Soil Erosion Inspector,Soil Tester,UDC Construction Inspector</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>UDC Inspection Agency,UDC Plumbing Inspector</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>DPCP Submitted Renewal Applications</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Renewals</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Renewal_Reinstatement_Type__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Renewal_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Incomplete,Generate Fee,Submitted</value>
        </filters>
        <label>Incomplete Renewals</label>
    </listViews>
    <listViews>
        <fullName>MFH_Submitted_Renewal_Applications</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Applicant__c</columns>
        <columns>Credential__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Renewal_Reinstatement_Type__c</columns>
        <columns>Attestation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Dealer,Manufactured Homes Installer</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Manufacturer,Manufactured Homes Salesperson</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Community Permit</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>MFH Submitted Renewal Applications</label>
    </listViews>
    <listViews>
        <fullName>Renewal_Applications_For_Audit</fullName>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>License__c</columns>
        <columns>Selected_for_Audit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Selected_for_Audit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Renewal Applications For Audit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RNW-{0000}</displayFormat>
        <label>Renewal &amp; Reinstatement Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Applications</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <label>Business</label>
    </recordTypes>
</CustomObject>